--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -4,8 +4,37 @@ version: '0.1'
 author: maciej+guides@prophecy.io
 language: python
 buildSystem: wheel
-pipelines: {}
+pipelines:
+  pipelines/customers_spending:
+    name: customers_spending
+    description: ''
+    author: maciej+guides@prophecy.io
+    mode: batch
+    language: python
+    createdAt: '2022-06-24 16:52:25'
+    datasets:
+      inputs:
+      - 7750/datasets/customers_source
+      - 7750/datasets/orders
+      - 7750/datasets/nations
+      - 7750/datasets/customers
+      - 7750/datasets/regions
+      outputs:
+      - 7750/datasets/final_report
+    dependencies: {}
 datasets:
+  datasets/orders:
+    name: orders
+    description: ''
+    author: maciej+guides@prophecy.io
+    createdAt: '2022-06-24 16:54:28'
+    physicalDatasets:
+      dev:
+        fabricId: 1436
+        datasetType: File
+        description: ''
+        author: maciej+guides@prophecy.io
+        createdAt: '2022-06-24 16:54:28'
   datasets/regions:
     name: regions
     description: ''
@@ -30,6 +59,18 @@ datasets:
         description: ''
         author: maciej+guides@prophecy.io
         createdAt: '2022-06-24 00:13:42'
+  datasets/customers_source:
+    name: customers_source
+    description: ''
+    author: maciej+guides@prophecy.io
+    createdAt: '2022-06-24 16:53:58'
+    physicalDatasets:
+      dev:
+        fabricId: 1436
+        datasetType: File
+        description: ''
+        author: maciej+guides@prophecy.io
+        createdAt: '2022-06-24 16:53:58'
   datasets/nations:
     name: nations
     description: ''
@@ -42,8 +83,39 @@ datasets:
         description: ''
         author: maciej+guides@prophecy.io
         createdAt: '2022-06-24 00:15:36'
+  datasets/final_report:
+    name: final_report
+    description: ''
+    author: maciej+guides@prophecy.io
+    createdAt: '2022-06-24 16:58:39'
+    physicalDatasets:
+      dev:
+        fabricId: 1436
+        datasetType: Database
+        description: ''
+        author: maciej+guides@prophecy.io
+        createdAt: '2022-06-24 16:58:39'
 templates: {}
-jobs: {}
+jobs:
+  jobs/monthly_report:
+    name: monthly_report
+    description: ''
+    fabricUID: 1436
+    scheduler:
+      Databricks: {}
+    jobSize: small
+    scheduleCron: 0 0 0 1 * ? *
+    timeout: null
+    alerting:
+      emails: maciej@prophecy.io
+      onStart: false
+      onSuccess: true
+      onFailure: true
+    pipelines:
+    - 7750/pipelines/customers_spending
+    enabled: true
+    createdAt: '2022-06-24 16:59:58'
+    author: maciej+guides@prophecy.io
 libraries: []
 subgraphs:
   subgraphs/customer_details:
