--- a/datasets/orders_source/pbt_aspects.yml
+++ b/datasets/orders_source/pbt_aspects.yml
@@ -2,35 +2,39 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: c_custkey
+  - name: o_orderkey
     type: long
     nullable: true
     metadata: {}
-  - name: c_name
-    type: string
-    nullable: true
-    metadata: {}
-  - name: c_address
-    type: string
-    nullable: true
-    metadata: {}
-  - name: c_nationkey
+  - name: o_custkey
     type: long
     nullable: true
     metadata: {}
-  - name: c_phone
+  - name: o_orderstatus
     type: string
     nullable: true
     metadata: {}
-  - name: c_acctbal
+  - name: o_totalprice
     type: decimal(18,2)
     nullable: true
     metadata: {}
-  - name: c_mktsegment
+  - name: o_orderdate
+    type: date
+    nullable: true
+    metadata: {}
+  - name: o_orderpriority
     type: string
     nullable: true
     metadata: {}
-  - name: c_comment
+  - name: o_clerk
+    type: string
+    nullable: true
+    metadata: {}
+  - name: o_shippriority
+    type: integer
+    nullable: true
+    metadata: {}
+  - name: o_comment
     type: string
     nullable: true
     metadata: {}
