--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -11,7 +11,7 @@ pipelines:
     author: maciej+guides@prophecy.io
     mode: batch
     language: python
-    createdAt: '2022-06-28 23:00:48'
+    createdAt: '2022-06-29 00:06:43'
     datasets:
       inputs:
       - 7750/datasets/customers_source
@@ -20,7 +20,7 @@ pipelines:
       - 7750/datasets/customers
       - 7750/datasets/regions
       outputs:
-      - 7750/datasets/report
+      - 7750/datasets/reports
     dependencies: {}
 datasets:
   datasets/regions:
@@ -51,26 +51,38 @@ datasets:
     name: orders_source
     description: ''
     author: maciej+guides@prophecy.io
-    createdAt: '2022-06-28 23:04:18'
+    createdAt: '2022-06-29 00:09:18'
     physicalDatasets:
       dev:
         fabricId: 1436
         datasetType: File
         description: ''
         author: maciej+guides@prophecy.io
-        createdAt: '2022-06-28 23:04:18'
+        createdAt: '2022-06-29 00:09:18'
+  datasets/reports:
+    name: reports
+    description: ''
+    author: maciej+guides@prophecy.io
+    createdAt: '2022-06-29 00:13:56'
+    physicalDatasets:
+      dev:
+        fabricId: 1436
+        datasetType: Database
+        description: ''
+        author: maciej+guides@prophecy.io
+        createdAt: '2022-06-29 00:13:56'
   datasets/customers_source:
     name: customers_source
     description: ''
     author: maciej+guides@prophecy.io
-    createdAt: '2022-06-28 23:03:43'
+    createdAt: '2022-06-29 00:08:37'
     physicalDatasets:
       dev:
         fabricId: 1436
         datasetType: File
         description: ''
         author: maciej+guides@prophecy.io
-        createdAt: '2022-06-28 23:03:43'
+        createdAt: '2022-06-29 00:08:37'
   datasets/nations:
     name: nations
     description: ''
@@ -83,22 +95,10 @@ datasets:
         description: ''
         author: maciej+guides@prophecy.io
         createdAt: '2022-06-24 00:15:36'
-  datasets/report:
-    name: report
-    description: ''
-    author: maciej+guides@prophecy.io
-    createdAt: '2022-06-28 23:08:48'
-    physicalDatasets:
-      dev:
-        fabricId: 1436
-        datasetType: Database
-        description: ''
-        author: maciej+guides@prophecy.io
-        createdAt: '2022-06-28 23:08:48'
 templates: {}
 jobs:
-  jobs/monthly_reporting:
-    name: monthly_reporting
+  jobs/monthly_report:
+    name: monthly_report
     description: ''
     fabricUID: 1436
     scheduler:
@@ -114,7 +114,7 @@ jobs:
     pipelines:
     - 7750/pipelines/customers_spendings
     enabled: true
-    createdAt: '2022-06-28 23:10:21'
+    createdAt: '2022-06-29 00:14:43'
     author: maciej+guides@prophecy.io
 libraries: []
 subgraphs:
